Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -26,7 +26,7 @@ I, [[Gerald Lee]], being of full age and sound mind and memory, do make, publish
 *Washed out rest*
 *Signing and date*
 
-[[Next Scene-&gt;Intro Door]]</tw-passagedata><tw-passagedata pid="7" name="Close Application" tags="" position="1037.3333333333333,78" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Gerald Lee" tags="Character" position="108,586" size="100,100">Grandfather of our [[Protagonist]]</tw-passagedata><tw-passagedata pid="9" name="Protagonist" tags="Player Character Actor" position="106,392.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Intro Door" tags="Cutscene" position="462,516.6666666666666" size="100,100">*Scene of an closed gate like door of your grandfathers mansion*
+[[Next Scene-&gt;Intro Door]]</tw-passagedata><tw-passagedata pid="7" name="Close Application" tags="" position="1037.3333333333333,78" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Gerald Lee" tags="Character" position="103,516" size="100,100">Grandfather of our [[Protagonist]]</tw-passagedata><tw-passagedata pid="9" name="Protagonist" tags="Player Character Actor" position="106,392.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Intro Door" tags="Cutscene" position="462,516.6666666666666" size="100,100">*Scene of an closed gate like door of your grandfathers mansion*
 *Rain, lightning and thunder at night*
 *Slow zoom onto the door*
 *Door opens with [[Squeek sound]]*
@@ -35,7 +35,7 @@ I, [[Gerald Lee]], being of full age and sound mind and memory, do make, publish
 
 [[Narrator]]: &quot;Fighting his way through this horrible storm [[Protagonist]], finally approaches the door to his tragically acquired house. Upon entering he takes a deep breath and takes a look through the main hall, he finds himself in.&quot;
 
-[[Protagonist]]: &quot;Holy s**t!&quot;
+[[Protagonist]]: &quot;Holy shit!&quot;
 
 [[Narrator]]: &quot;He calls out, realizing the massive size of the whole room. He takes a second look around realizing the miserable state the Hall was left in, cobwebs hanging all over the place and thick layers of dust covering almost every single corner of a once beautiful place.&quot;
 
@@ -58,7 +58,7 @@ Interactions:
 [[dresser key]] 
 [[misplaced cupboard]] 
 [[fire extinguisher]]
-[[door to the dining hall]]</tw-passagedata><tw-passagedata pid="14" name="Narrator" tags="Character" position="108,716" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Looking for a place to sleep" tags="Gameplay Quest" position="457.6666666666667,817.6666666666666" size="100,100">Locations: 
+[[door to the dining hall]]</tw-passagedata><tw-passagedata pid="14" name="Narrator" tags="Character" position="103,646" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Looking for a place to sleep" tags="Gameplay Quest" position="457.6666666666667,817.6666666666666" size="100,100">Locations: 
 [[Main Hall]]
 [[bedroom]] 
 
@@ -129,7 +129,7 @@ Is accuired through opening a [[dresser]] with the [[dresser key]]
 *pick up:*
 [[Narrator]]: &quot;Knowing he will need it for something, [[Protagonist]] picks up the old extingusher.&quot;
 
-[[Protagonist]]: &quot;Maybe I&#39;ll need to punch some bad guys or good guys or something, but I will use it to punch something. Thats for certain.&quot;</tw-passagedata><tw-passagedata pid="19" name="dresser" tags="Object" position="1278,832.0000000000001" size="100,100">Location: [[Main Hall]]
+[[Protagonist]]: &quot;Maybe I&#39;ll need to punch some bad guys or good guys or something, but I will use it to punch something. Thats for damm sure.&quot;</tw-passagedata><tw-passagedata pid="19" name="dresser" tags="Object" position="1278,832.0000000000001" size="100,100">Location: [[Main Hall]]
 
 Quest: [[Looking for a place to sleep]] 
 
@@ -267,6 +267,28 @@ A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passaged
 [[bedroom]] 
 
 Quest:
+[[Finding a place to eat]] 
+
+After turning on the lamp for the first time it can be talk to and only after that can be turned off to change its personality
+
+Talking to the lamp reveals that the [[Flashlight]] can be found within the [[bed]] 
+
+The lamp has seen many people coming in and out turns out your grandfather was quite the bachelor. However all of those experiences fucked with the lamps mind and split it in two. When its energized its in the present and while off its still in a past where the war was still going on and your grandfather had just finished his first sucsessfull expedition.
+
+*look at*
+
+[[Narrator]]: &quot;[[Protagonist]] remebers this lamp well, once he fell against the small desk it sits upon and it allmost fell down. When his grandfather saw him cryomg next to the table, he did not try to calm him or ask if he was allright the only thing he cared about was if his stupid lamp was still fine and well.&quot;
+
+*use:*
+*Changes if the lamp is energized or not and therby changes his personality*
+
+*Turning on the lamp:*
+[[Narrator]]: &quot;With a bright flash the lamp starts lighting up the room. It almost seems like it woke up from a dream of a long gone past.&quot;
+
+*Turning off the lamp:*
+[[Narrator]]: &quot;With the fading lights the past seems to come back, haunting her again and agaian.&quot;
+
+*talk to, lamp on*
 
 </tw-passagedata><tw-passagedata pid="34" name="Flashlight" tags="Object Flashlight" position="1466,1205.3333333333335" size="100,100">Location: 
 [[bedroom]] 
