Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -1,4 +1,4 @@
-<tw-storydata name="Global Game Jam" startnode="1" creator="Twine" creator-version="2.2.1" ifid="2F4D8A4A-3299-48E3-B540-49CD7A0BD27B" zoom="0.6" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="Cutscene" color="red"></tw-tag>,<tw-tag name="Character" color="yellow"></tw-tag>,<tw-tag name="Audio" color="blue"></tw-tag>,<tw-tag name="Gameplay-Passage" color="green"></tw-tag>,<tw-tag name="Art-Asset" color="gray"></tw-tag>,<tw-tag name="Gameplay" color="green"></tw-tag>,<tw-tag name="Location" color="orange"></tw-tag>,<tw-tag name="Dialouge" color="red"></tw-tag>,<tw-tag name="Object" color="purple"></tw-tag><tw-passagedata pid="1" name="Main Menu" tags="Menu UI" position="464,98" size="100,100">Shows the door to the mansions in the background
+<tw-storydata name="Global Game Jam" startnode="1" creator="Twine" creator-version="2.2.1" ifid="2F4D8A4A-3299-48E3-B540-49CD7A0BD27B" zoom="0.6" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="Cutscene" color="red"></tw-tag>,<tw-tag name="Character" color="yellow"></tw-tag>,<tw-tag name="Audio" color="blue"></tw-tag>,<tw-tag name="Gameplay-Passage" color="green"></tw-tag>,<tw-tag name="Art-Asset" color="gray"></tw-tag>,<tw-tag name="Gameplay" color="green"></tw-tag>,<tw-tag name="Location" color="orange"></tw-tag>,<tw-tag name="Dialouge" color="red"></tw-tag>,<tw-tag name="Object" color="purple"></tw-tag>,<tw-tag name="Dialoge-Option" color="gray"></tw-tag><tw-passagedata pid="1" name="Main Menu" tags="Menu UI" position="464,98" size="100,100">Shows the door to the mansions in the background
 
 Title Logo Up top
 
@@ -185,7 +185,7 @@ Must be Pulled to gain accses to the [[dresser key]]
 
 [[Narrator]]: &quot;As he pulls the carpet, dust clouds fill the room. He coughes and as his sight clears he sees a small key lying on the floor.&quot;
 
-*Change Sprite to carpet moved and spawn [[dresser key]]*</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="1096.6666666666667,400.33333333333326" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1471,562" size="100,100">Quest:
+*Change Sprite to carpet moved and spawn [[dresser key]]*</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="1116.6666666666667,403.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1471,562" size="100,100">Quest:
 [[Looking for a place to sleep]] 
 Location:
 [[bedroom]] 
@@ -263,7 +263,7 @@ The hidden switch opens the [[door to the dining hall]] </tw-passagedata><tw-pas
 Quest:
 [[Finding a place to eat]] 
 
-A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passagedata><tw-passagedata pid="33" name="bedside lamp" tags="Object Pick-Up" position="1472.6666666666667,827" size="100,100">Location:
+A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passagedata><tw-passagedata pid="33" name="bedside lamp" tags="Object Pick-Up" position="1471,822" size="100,100">Location:
 [[bedroom]] 
 
 Quest:
@@ -290,11 +290,32 @@ The lamp has seen many people coming in and out turns out your grandfather was q
 
 *talk to, lamp on*
 
+[[Protagonist]]: &quot;Hmm what to do ... what to do?&quot;
+
+[[Narrator]]: &quot;He says while thinking about his situation.
+When suddendly the bedside lamps answers him.&quot;
+
+[[bedside lamp]]: &quot;Looks like your lost&quot;
+
+[[Narrator]]: &quot; Suprised by the sound of another voice, [[Protagonist]] jumps up almost falling flat on his face. As he realizes who is speaking with him, he calms down a litte bit and starts to thing about how to propably answer a question of a bedside lamp.&quot;
+
+[[1. How the hell did you learn to talk? No offense but you are still a bedside lamp.-&gt;Bedside Lamp ON answer 1]]
+
+[[2. Is this some kind of meta joke or what?-&gt;Bedside Lamp ON answer 1]]
+
+[[3. Yeah im lost, so what? You don&#39;t really seem to fit in either. -&gt;Bedside Lamp ON answer 1]] 
+
 </tw-passagedata><tw-passagedata pid="34" name="Flashlight" tags="Object Flashlight" position="1466,1205.3333333333335" size="100,100">Location: 
 [[bedroom]] 
 
 Quest:
 [[Finding a place to eat]] 
 
-Can be found within the [[bed]] </tw-passagedata></tw-storydata>
+Can be found within the [[bed]] </tw-passagedata><tw-passagedata pid="35" name="Bedside Lamp ON answer 1" tags="Cutscene Dialog" position="1621.0000000000002,822.0000000000002" size="100,100">[[bedside lamp]]: &quot;I know ... I know, it is weird for you people but you have to understand that it is even weirder for me. How am I supposed to know why I am a concious lamp or how I became one and if I knew you would propably know as well, would you not?&quot;
+
+[[Narrator]]: &quot;Confused by both the situation and the philosophical nature of the answer, [[Protagonist]] just nods his head. After a few moments of silence he feels pressured to keep the conversation going and after a few more moments he finds an satisfactory answer.&quot;
+
+[[1. But I mean all the publicity doesn&#39;t really fit your style either, does it?-&gt;bedisde lamp on answer 2]]
+
+[[2. </tw-passagedata><tw-passagedata pid="36" name="bedisde lamp on answer 2" tags="" position="1621.0000000000002,972.0000000000002" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
