Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -104,7 +104,7 @@ Through punching it with a [[fire extinguisher]] the cuboard falls towards the p
 
 [[John Luke]]: &quot;Well this should work&quot;
 
-*Transform to [[Fallen Cupboard]]</tw-passagedata><tw-passagedata pid="17" name="bedroom" tags="Location" position="1477.6666666666667,401.99999999999994" size="100,100">Quests:
+*Transform to [[Fallen Cupboard]]</tw-passagedata><tw-passagedata pid="17" name="bedroom" tags="Location" position="1472.6666666666667,401.99999999999994" size="100,100">Quests:
 [[Looking for a place to sleep]] 
 [[Finding a place to eat]]
 
@@ -290,7 +290,7 @@ The lamp has seen many people coming in and out turns out your grandfather was q
 [[Narrator]]: &quot;With a bright flash the lamp starts lighting up the room. It almost seems like it woke up from a dream of a long gone past.&quot;
 
 *Turning off the lamp:*
-[[Narrator]]: &quot;With the fading lights the past seems to come back, haunting her again and agaian.&quot;
+[[Narrator]]: &quot;With the fading lights the past seems to come back, haunting him again and agaian.&quot;
 
 *talk to, lamp on*
 
@@ -313,17 +313,39 @@ When suddendly the bedside lamps answers him.&quot;
 
 [[bedside lamp]]: &quot;Another night another new face at your side.&quot;
 
-[[Narrator]]: &quot;Again a voice cuts trough the silence of this hughe place , again [[John Luke]] winces and again the lamp was the one to speak. But before he can answer her again, she contiues with her one sided conversation.&quot;
+[[Narrator]]: &quot;Again a voice cuts trough the silence of this hughe place , again [[John Luke]] winces and again the lamp was the one to speak. But before Jhon can answer him again, he contiues with his one sided conversation.&quot;
 
 [[bedside lamp]]: &quot;Yes yes I know that there is still a lot to celbrate, congratulations on your most recent award by the way.
 
 And you have all the rights to do so but don&#39;t you think it might finally be time to get working again or at least to go to bed sober for a change.
-p
-I might be a wallflower but currently you are just wasting talent here and time and money and not to mention your health.&quot;
 
-[[Narrator]]: &quot;Now asking him self to whom the lamp might be talking, [[John Luke]] decides to stay a while and listen.&quot;
+I might be a wallflower but currently you are just wasting talent here, and time and money and not to mention your health.&quot;
 
-[[bedside lamp]]: &quot;</tw-passagedata><tw-passagedata pid="34" name="Flashlight" tags="Object Flashlight" position="1466,1205.3333333333335" size="100,100">Location: 
+[[Narrator]]: &quot;Now asking him self to whom the lamp might be talking to, [[John Luke]] decides to stay a while and listen.&quot;
+
+[[bedside lamp]]: &quot;Yeah I know that beeing an adventurer is less fun and joy than being one of the most sought after bachelors around, but damm me if it is not what you are actually ment to do with your short life.
+
+I told you again and again that I will not recive the gift to die in peace any time time soon, it seems it is not ment to be, at least not yet. 
+
+OK fine than, contiue to drink, fuck and drug yourself to death. But do not come bagging for forgivness when your fame starts to wear off and you need help to get back to being an explorer again.&quot;
+
+[[Narrator]] &quot;And with that the lamp turns to being silent again. [[John Luke]] listens to silence for a few more moments before he contiues his search through the house again.&quot;
+
+*talk to lamp on after the off dialouge*
+
+[[John Luke]]: &quot;Do you know that you hold quiet the monolouge while turned off?&quot;
+
+[[Narrator]]: &quot;It almost seems like the lamp is blushing before he starts giving John his suprising anwser.&quot;
+
+[[bedside lamp]]: &quot;Well I did not think that you would notice so quickly. Well I guess I owe you at least some anwser. See I might not know what exactly I am or how excatlcy I came to be, but I do know a lot and when I say a lot I mean every memory of mine over my 150 year long life is stored somwhere in what you could call my mind. Turns out not even the mind of an concious lamp can cope with that many memories and experiences, which is why my mind cracked in half many years ago. So what you heard was the other half of my mind reliving one of my earlier memories. Maybe even one with your recently passed grandfather, your his grandchild and heir are you not?&quot;
+
+[[Narrator]]: &quot;Trying to follow the Lamps explenation John almost missed that the lamp knew who he were and why he was here. Trying to hide his state of confusion he says:&quot;
+
+[[1. I am but I don&#39;t think you were talking to my grandfather back then, you talked with someone who seemed to be a famous bachelor, not my granddad.-&gt;Bedside Lamp ON p2 answer 1.1.]]
+
+[[2. So you knew my grandfather? Any idea why he would leave me all of that?-&gt;Bedisde Lamp ON p2 answer 1.2.]]
+
+</tw-passagedata><tw-passagedata pid="34" name="Flashlight" tags="Object Flashlight" position="1466,1205.3333333333335" size="100,100">Location: 
 [[bedroom]] 
 
 Quest:
@@ -343,7 +365,7 @@ Can be found within the [[bed]] </tw-passagedata><tw-passagedata pid="35" name="
 
 [[John Luke]]: &quot;I see, well I&#39;ll better leave you alone then.&quot;
 
-[[bedside lamp]]: &quot;Do that or not, who is to decide but you?&quot;
+[[bedside lamp]]: &quot;Do that or not, whom is to decide but you?&quot;
 
-[[Narrator]]: &quot;Even more confused than before the conversation with the lamp [[John Luke]] takes his leave, asking himself if it is rude not to turn of the lamp. If he&#39;s onest though, he does not really care in the end it is still just a lamp is it not?&quot;</tw-passagedata></tw-storydata>
+[[Narrator]]: &quot;Even more confused than before the conversation with the lamp [[John Luke]] takes his leave, asking himself if it is rude not to turn of the lamp. If he&#39;s honest though he does not really care. In the end it is still just a lamp, is it not?&quot;</tw-passagedata><tw-passagedata pid="37" name="Bedside Lamp ON p2 answer 1.1." tags="Cutscene Dialog" position="1682.6666666666665,830.3333333333334" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="38" name="Bedisde Lamp ON p2 answer 1.2." tags="Cutscene Dialog" position="1679.3333333333333,952.0000000000001" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
