Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -267,7 +267,7 @@ The hidden switch opens the [[door to the dining hall]] </tw-passagedata><tw-pas
 Quest:
 [[Finding a place to eat]] 
 
-A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passagedata><tw-passagedata pid="33" name="bedside lamp" tags="Object Pick-Up" position="1471,822" size="100,100">Location:
+A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passagedata><tw-passagedata pid="33" name="bedside lamp" tags="Object Pick-Up" position="1474.3333333333333,827" size="100,100">Location:
 [[bedroom]] 
 
 Quest:
@@ -343,7 +343,7 @@ OK fine than, contiue to drink, fuck and drug yourself to death. But do not come
 
 [[1. I am but I don&#39;t think you were talking to my grandfather back then, you talked with someone who seemed to be a famous bachelor, not my granddad.-&gt;Bedside Lamp ON p2 answer 1.1.]]
 
-[[2. So you knew my grandfather? Any idea why he would leave me all of that?-&gt;Bedisde Lamp ON p2 answer 1.2.]]
+[[2. So you knew my grandfather? Any idea why he would leave me all of this?-&gt;Bedside Lamp ON p2 answer 1.1.]]
 
 </tw-passagedata><tw-passagedata pid="34" name="Flashlight" tags="Object Flashlight" position="1466,1205.3333333333335" size="100,100">Location: 
 [[bedroom]] 
@@ -367,5 +367,12 @@ Can be found within the [[bed]] </tw-passagedata><tw-passagedata pid="35" name="
 
 [[bedside lamp]]: &quot;Do that or not, whom is to decide but you?&quot;
 
-[[Narrator]]: &quot;Even more confused than before the conversation with the lamp [[John Luke]] takes his leave, asking himself if it is rude not to turn of the lamp. If he&#39;s honest though he does not really care. In the end it is still just a lamp, is it not?&quot;</tw-passagedata><tw-passagedata pid="37" name="Bedside Lamp ON p2 answer 1.1." tags="Cutscene Dialog" position="1682.6666666666665,830.3333333333334" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="38" name="Bedisde Lamp ON p2 answer 1.2." tags="Cutscene Dialog" position="1679.3333333333333,952.0000000000001" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+[[Narrator]]: &quot;Even more confused than before the conversation with the lamp [[John Luke]] takes his leave, asking himself if it is rude not to turn of the lamp. If he&#39;s honest though he does not really care. In the end it is still just a lamp, is it not?&quot;</tw-passagedata><tw-passagedata pid="37" name="Bedside Lamp ON p2 answer 1.1." tags="Cutscene Dialog" position="1682.6666666666665,830.3333333333334" size="100,100">[[bedside lamp]]: &quot;You do not seem to know a whole lot about your grandfather, let me tell you he was truly one hell of a man.&quot;
+
+[[John Luke]]: &quot;Yeah one hell of an asshole.&quot;
+
+[[bedside lamp]]: &quot;In the end he was thats true but see he had his reasons, reasons long forgotten even by me. After my brain split he helped me to rember some of them but I could not tell you for sure what drove him into the madness, that where his final years. What I do know however that he once  was my dearest friend and my best man at my own small wedding, which he organized. How I wish I could rember these days just me, my wife, my child and him and now look at me alone in an empty house the lone father of one child. It is rough especially when your fighting with your child all the time, you would call it puperty even though it seems to take a bit longer for us lamps.&quot;
+
+[[Narrator]]: &quot;John listens fascinated by the stories of a grandfather he never had or at least never got to know and realizes that he starts to like the lamp even though just thinking about it sound super crazy. He also decides that if he were to find the lamp&#39;s child he would try to at talk to him and see if he could help, he always had his way with teenangers.
+He contiues talking with the lamp a bit before he takes his leave, wondering where the child might be and how it might look like.&quot;</tw-passagedata></tw-storydata>
 
