Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -114,9 +114,7 @@ Gets renewed upon Quest progression
 
 Interactables:
 [[bed]]
-[[Bedside Table]]
 [[bedside lamp]] 
-[[Newspaper]] 
 [[Laundry bascet]] 
 [[Flashlight]] </tw-passagedata><tw-passagedata pid="18" name="fire extinguisher" tags="Object Pick-Up" position="1279.3333333333333,957.3333333333335" size="100,100">Location: [[Main Hall]] 
 
@@ -207,7 +205,10 @@ Here the [[John Luke]] can sleep and therby [[save]] the players progress.
 
 *Do you want to save the game?*
 *[[Yes-&gt;save]] 
-No: Continue*</tw-passagedata><tw-passagedata pid="24" name="save" tags="" position="1017.6666666666667,230.99999999999991" size="100,100">The game can be saved by using the [[bed]] 
+No: Continue*~
+
+*pull:*
+[[Narrator]]:&quot; As he pulls away the sheets an flashlights appears on the bed. Weardly enough it looks brand new.&quot;</tw-passagedata><tw-passagedata pid="24" name="save" tags="" position="1017.6666666666667,230.99999999999991" size="100,100">The game can be saved by using the [[bed]] 
 A file saving the games progress
 </tw-passagedata><tw-passagedata pid="25" name="second quest intro" tags="Cutscene" position="459,961.6666666666666" size="100,100">Location: 
 [[bedroom]]
@@ -241,19 +242,7 @@ Obstacle:
 The Door to the [[Dining Hall]] is locked
 The [[Dining Hall]] looks like shit
 Solution:
-</tw-passagedata><tw-passagedata pid="29" name="Bedside Table" tags="Object" position="1472.6666666666667,698.6666666666667" size="100,100">Location:
-[[bedroom]] 
-
-A small table next to the [[bed]]
-Has two small drawers
-A [[bedside lamp]] sits upon it
-Contains a old [[Newspaper]]
-
-*Pull:*
-</tw-passagedata><tw-passagedata pid="30" name="Newspaper" tags="Object Pick-Up" position="1470.9999999999998,948.6666666666667" size="100,100">Location: [[bedroom]]
-
-Found within the [[Bedside Table]]
-</tw-passagedata><tw-passagedata pid="31" name="Laundry bascet" tags="Object" position="1467.6666666666665,1078.6666666666667" size="100,100">Location:
+</tw-passagedata><tw-passagedata pid="29" name="Laundry bascet" tags="Object" position="1482.6666666666665,938.6666666666667" size="100,100">Location:
 [[bedroom]]
 
 Quest:
@@ -261,17 +250,24 @@ Quest:
 
 An empty bascet containing no hidden switch or does it?
 The hidden switch is revealed by using the [[Flashlight]]
-The hidden switch opens the [[door to the dining hall]] </tw-passagedata><tw-passagedata pid="32" name="door to the dining hall" tags="Object" position="1272.6666666666672,1340.6666666666665" size="100,100">Location: 
+The hidden switch opens the [[door to the dining hall]] 
+
+*Use [[Flashlight]] on Laundry bascet*
+[[John Luke]]: &quot;Oh who would have thought that an empty bascet would contain a hidden switch?&quot;
+
+[[Narrator]]: &quot;Without hesitation he pulls the switch. An quiet click sound comes from the Main hall, at least he thinks. It might as well could be the return of the ringing in his ears. Only time will tell.&quot;</tw-passagedata><tw-passagedata pid="30" name="door to the dining hall" tags="Object" position="1272.6666666666672,1340.6666666666665" size="100,100">Location: 
 [[Main Hall]] 
 
 Quest:
 [[Finding a place to eat]] 
 
-A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passagedata><tw-passagedata pid="33" name="bedside lamp" tags="Object Pick-Up" position="1474.3333333333333,827" size="100,100">Location:
+A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passagedata><tw-passagedata pid="31" name="bedside lamp" tags="Object Pick-Up" position="1481,693.6666666666666" size="100,100">Location:
 [[bedroom]] 
 
 Quest:
 [[Finding a place to eat]] 
+
+Sits ontop a beside table
 
 After turning on the lamp for the first time it can be talk to and only after that can be turned off to change its personality
 
@@ -345,13 +341,19 @@ OK fine than, contiue to drink, fuck and drug yourself to death. But do not come
 
 [[2. So you knew my grandfather? Any idea why he would leave me all of this?-&gt;Bedside Lamp ON p2 answer 1.1.]]
 
-</tw-passagedata><tw-passagedata pid="34" name="Flashlight" tags="Object Flashlight" position="1466,1205.3333333333335" size="100,100">Location: 
+</tw-passagedata><tw-passagedata pid="32" name="Flashlight" tags="Object Flashlight" position="1482.6666666666667,808.6666666666667" size="100,100">Location: 
 [[bedroom]] 
 
 Quest:
 [[Finding a place to eat]] 
 
-Can be found within the [[bed]] </tw-passagedata><tw-passagedata pid="35" name="Bedside Lamp ON answer 1" tags="Cutscene Dialog" position="1679.3333333333335,708.6666666666667" size="100,100">[[bedside lamp]]: &quot;I know ... I know, it is weird for you people but you have to understand that it is even weirder for me. How am I supposed to know why I am a concious lamp or how I became one and if I knew you would propably know as well, would you not?&quot;
+Can be found within the [[bed]]
+
+*pick up:*
+
+[[John Luke]]: &quot;A flashlight in a bed, what does this remind me of?
+
+[[Narrator]]: He does not rember and picks up the odd looking flashlight.&quot;</tw-passagedata><tw-passagedata pid="33" name="Bedside Lamp ON answer 1" tags="Cutscene Dialog" position="1679.3333333333335,708.6666666666667" size="100,100">[[bedside lamp]]: &quot;I know ... I know, it is weird for you people but you have to understand that it is even weirder for me. How am I supposed to know why I am a concious lamp or how I became one and if I knew you would propably know as well, would you not?&quot;
 
 [[Narrator]]: &quot;Confused by both the situation and the philosophical nature of the answer, [[John Luke]] just nods his head. After a few moments of silence he feels pressured to keep the conversation going and after a few more moments he finds an satisfactory answer.&quot;
 
@@ -359,7 +361,7 @@ Can be found within the [[bed]] </tw-passagedata><tw-passagedata pid="35" name="
 
 [[2. Must be lonly, not knowing and unable to move litreally anywhere.-&gt;Bedside lamp ON answer 2]]
 
-[[3. Well at leat your consious I mean means thats quite the feat to begin with. So how do you juse it this consciousness of yours?-&gt;Bedside lamp ON answer 2]]</tw-passagedata><tw-passagedata pid="36" name="Bedside lamp ON answer 2" tags="Cutscene Dialog" position="1806.0000000000002,708.666666666667" size="100,100">[[bedside lamp]]: &quot;Im kind of a loner you know, guess you get used to it over the decades.&quot;
+[[3. Well at leat your consious I mean means thats quite the feat to begin with. So how do you juse it this consciousness of yours?-&gt;Bedside lamp ON answer 2]]</tw-passagedata><tw-passagedata pid="34" name="Bedside lamp ON answer 2" tags="Cutscene Dialog" position="1806.0000000000002,708.666666666667" size="100,100">[[bedside lamp]]: &quot;Im kind of a loner you know, guess you get used to it over the decades.&quot;
 
 [[Narrator]]: &quot;He laughs painfully.&quot;
 
@@ -367,7 +369,7 @@ Can be found within the [[bed]] </tw-passagedata><tw-passagedata pid="35" name="
 
 [[bedside lamp]]: &quot;Do that or not, whom is to decide but you?&quot;
 
-[[Narrator]]: &quot;Even more confused than before the conversation with the lamp [[John Luke]] takes his leave, asking himself if it is rude not to turn of the lamp. If he&#39;s honest though he does not really care. In the end it is still just a lamp, is it not?&quot;</tw-passagedata><tw-passagedata pid="37" name="Bedside Lamp ON p2 answer 1.1." tags="Cutscene Dialog" position="1682.6666666666665,830.3333333333334" size="100,100">[[bedside lamp]]: &quot;You do not seem to know a whole lot about your grandfather, let me tell you he was truly one hell of a man.&quot;
+[[Narrator]]: &quot;Even more confused than before the conversation with the lamp [[John Luke]] takes his leave, asking himself if it is rude not to turn of the lamp. If he&#39;s honest though he does not really care. In the end it is still just a lamp, is it not?&quot;</tw-passagedata><tw-passagedata pid="35" name="Bedside Lamp ON p2 answer 1.1." tags="Cutscene Dialog" position="1682.6666666666665,830.3333333333334" size="100,100">[[bedside lamp]]: &quot;You do not seem to know a whole lot about your grandfather, let me tell you he was truly one hell of a man.&quot;
 
 [[John Luke]]: &quot;Yeah one hell of an asshole.&quot;
 
