Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -261,7 +261,13 @@ The hidden switch opens the [[door to the dining hall]]
 Quest:
 [[Finding a place to eat]] 
 
-A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passagedata><tw-passagedata pid="31" name="bedside lamp" tags="Object Pick-Up" position="1481,693.6666666666666" size="100,100">Location:
+A loked door leading from the [[Main Hall]] to the [[Dining Hall]] 
+
+*open,use after using the switch within the [[Laundry bascet]]*
+*Door opening sound*
+*Fade to black*
+*10 years later*
+*picture protagonist with wife and 2 Kids and lamp and flashlight*</tw-passagedata><tw-passagedata pid="31" name="bedside lamp" tags="Object Pick-Up" position="1481,693.6666666666666" size="100,100">Location:
 [[bedroom]] 
 
 Quest:
