Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -331,7 +331,7 @@ I told you again and again that I will not recive the gift to die in peace any t
 
 OK fine than, contiue to drink, fuck and drug yourself to death. But do not come bagging for forgivness when your fame starts to wear off and you need help to get back to being an explorer again.&quot;
 
-[[Narrator]] &quot;And with that the lamp turns to being silent again. [[John Luke]] listens to silence for a few more moments before he contiues his search through the house again.&quot;
+[[Narrator]]: &quot;And with that the lamp turns to being silent again. [[John Luke]] listens to silence for a few more moments before he contiues his search through the house again.&quot;
 
 *talk to lamp on after the off dialouge*
 
